--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -1,3 +1,14 @@
+@font-face{
+  font-family: "Secret Admirer";
+  src:local("SecretAdmirer"),
+  url('../fonts/SecretAdmirer.ttf') 
+}
+
+body {
+  background-image: url('../images/pattern.jpg');
+  background-size: cover;
+}
+
 .link-list {
   display: flex;
   justify-content: center;
