--- a/app/styles/Menu.css
+++ b/app/styles/Menu.css
@@ -1,11 +1,20 @@
+@font-face {
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/quicksand@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/quicksand@latest/latin-400-normal.woff) format('woff');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
 .menu-list {
   list-style: none;
 }
 
 .menu-item {
-  font-family: 'Secret Admirer';
-  font-size: 3.75rem;
-  line-height: 1;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.875rem;
+  line-height: 1.5;
 }
 
 .link {
